[project]
name = "vouch-portal"
version = "1.0.0"
description = "Community trust and reputation system for Telegram"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "python-telegram-bot==20.7",
    "asyncpg==0.29.0",
    "pydantic==2.5.0",
    "python-dotenv==1.0.0",
]

[tool.setuptools]
packages = ["vouch_portal"]
